Fixed the Navbar on windowed pages, being smaller than a mobile menu and making the navigation items wrap to the bottom lines, before the breakpoint of where the mobile menu started at 768px. I want to eventually get a dynamically loading mobile menu that dynamically detects when the mobile menu will be smaller than the screen and start the hamburger showing instead of it being a set fixed width.

--- a/src/app/components/NavBar/page.module.scss
+++ b/src/app/components/NavBar/page.module.scss
@@ -274,7 +274,7 @@ $normal-transition: 0.5s;
 //   }
 // }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 783px) {
   .menuTop {
     display: flex;
     border-bottom: solid 1px #ffffff1a;
